--- a/NewMinecraftServer/commands.yml
+++ b/NewMinecraftServer/commands.yml
@@ -15,3 +15,43 @@ ignore-vanilla-permissions: false
 aliases:
   icanhasbukkit:
   - version $1-
+  bukkit:help:
+  - []
+  bukkit:plugins:
+  - []
+  bukkit:pl:
+  - []
+  bukkit:ver:
+  - []
+  bukkit:about:
+  - []
+  bukkit:reload:
+  - []
+  bukkit:rl:
+  - []
+  bukkit:timings:
+  - []
+  bukkit:version:
+  - []
+  bukkit:?:
+  - []
+  help:
+  - []
+  plugins:
+  - []
+  pl:
+  - []
+  ver:
+  - []
+  about:
+  - []
+  reload:
+  - []
+  rl:
+  - []
+  timings:
+  - []
+  version:
+  - []
+  '?':
+  - []
