--- a/NewMinecraftServer/server.properties
+++ b/NewMinecraftServer/server.properties
@@ -1,47 +1,47 @@
 #Minecraft server properties
-#Fri Feb 28 09:01:20 CET 2020
-broadcast-rcon-to-ops=true
-view-distance=10
-max-build-height=256
-server-ip=
-level-seed=Testseed123
-rcon.port=25575
-gamemode=creative
-server-port=25565
-allow-nether=true
-enable-command-block=false
-enable-rcon=false
-enable-query=false
-op-permission-level=4
-prevent-proxy-connections=false
-generator-settings=
-resource-pack=
-level-name=world
-rcon.password=
-player-idle-timeout=0
-motd=Test MOTD
-query.port=25565
-debug=false
-force-gamemode=creative
-hardcore=false
-white-list=false
-broadcast-console-to-ops=true
-pvp=true
-spawn-npcs=true
-generate-structures=true
-spawn-animals=true
-snooper-enabled=true
-difficulty=hard
-function-permission-level=2
-network-compression-threshold=256
-level-type=default
-spawn-monsters=true
+#Fri Feb 28 16:30:01 CET 2020
+spawn-protection=-5
 max-tick-time=60000
+query.port=25565
+generator-settings=
+force-gamemode=false
+allow-nether=true
 enforce-whitelist=false
-use-native-transport=true
-max-players=100
+gamemode=creative
+broadcast-console-to-ops=true
+enable-query=false
+player-idle-timeout=0
+difficulty=hard
+spawn-monsters=true
+broadcast-rcon-to-ops=true
+op-permission-level=4
+pvp=true
+snooper-enabled=true
+level-type=default
+hardcore=false
+enable-command-block=false
+max-players=10
+network-compression-threshold=256
 resource-pack-sha1=
-spawn-protection=0
-online-mode=true
-allow-flight=false
 max-world-size=29999984
+function-permission-level=2
+rcon.port=25575
+server-port=25565
+debug=false
+server-ip=
+spawn-npcs=true
+allow-flight=false
+level-name=world
+view-distance=10
+resource-pack=
+spawn-animals=true
+white-list=false
+rcon.password=
+generate-structures=true
+online-mode=true
+max-build-height=256
+level-seed=Testseed123
+use-native-transport=true
+prevent-proxy-connections=false
+motd=Test MOTD
+enable-rcon=false
